# semanticClimateRAG

./: README.md  notes.txt  requirements.txt  setup.cfg
notebooks/: revlit_part2_rag_llm.py
src/: main.py  rag_llm.py
temp/content/db/: chroma.sqlite3
temp/markdowns/: PMC11792193_final.md  PMC11819868_final.md  PMC11859777_final.md  PMC11876561_final.md  PMC11940872_final.md  PMC11945817_final.md  PMC11964270_final.md  PMC11983554_final.md  PMC11993562_final.md  PMC12023620_final.md  PMC12029887_final.md  PMC12030443_final.md  PMC12032408_final.md
test/: test_simple.py
test/resources/phytochemical/: eupmc_results.json  saved_config.ini
test/resources/phytochemical/PMC11792193/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11819868/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11859777/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11876561/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11940872/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11945817/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11960942/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11964270/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11976223/: eupmc_result.json
test/resources/phytochemical/PMC11983554/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC11993562/: eupmc_result.json  fulltext.xml
test/resources/phytochemical/PMC12023620/: eupmc_result.json  fulltext.xml
(+6 files in other folders)
