[metadata]
name = semanticClimateRAG
version = 0.0.1
description = RAG tools for semanticClimate
long_description = file: README.md
long_description_content_type = text/markdown
author = Shabnam Barbhuiya, Peter Murray-Rust, Kamran Khan ALWI
author_email = petermurrayrust@googlemail.com
url = https://github.com/petermr/semanticClimateRAG
license = Apache2
keywords = RAG, Climate
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.9, <3.13
install_requires =
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    sc_rag=src.main:main
